# gpu_model

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  findings.md  progress.md  task_plan.md
tests/: CMakeLists.txt  test_main.cpp
tests/arch/: amdgpu_target_config_test.cpp  arch_registry_test.cpp  gpu_arch_spec_test.cpp  issue_config_test.cpp  topology_defaults_test.cpp
tests/asm_cases/: README.md
tests/asm_cases/loader/: accvgpr_variants.s  asm_flat_variants.s  asm_module_probe.s  asm_variant_probe.s  branch_mask_variants.s  ds_lds_variants.s  fallback_abi_kernarg.s  hidden_args_3d.s  kernarg_aggregate_by_value.s  mfma_bf16_variants.s  mfma_fp16_variants.s  mfma_fp32_variants.s  mfma_i8_variants.s  mfma_shape_variants.s  mfma_vop3p_variants.s  smrd_scalar_memory_variants.s  sop_scalar_variants.s  vop_compare_variants.s  vop_e32_e64_variants.s  vop_math_special_variants.s
tests/cycle/: advanced_syntax_cycle_test.cpp  async_memory_cycle_test.cpp  builtin_scalarbit_cycle_test.cpp  cache_cycle_test.cpp  constant_memory_cycle_test.cpp  cycle_ap_resident_blocks_test.cpp  cycle_smoke_test.cpp  divrem_cycle_test.cpp  fma_loop_cycle_test.cpp  hardware_design_config_cycle_test.cpp  local_bitwise_cycle_test.cpp  private_memory_cycle_test.cpp  representative_kernels_cycle_test.cpp  scaling_cycle_test.cpp  shared_bank_conflict_cycle_test.cpp  shared_barrier_cycle_test.cpp  shared_sync_cycle_test.cpp  softmax_shared_cycle_test.cpp  three_dimensional_cycle_test.cpp  transpose_shared_cycle_test.cpp  two_dimensional_cycle_test.cpp  waitcnt_barrier_switch_focused_test.cpp
tests/decode/: gcn_inst_db_lookup_test.cpp  gcn_inst_decoder_test.cpp  gcn_inst_format_test.cpp  gcn_inst_formatter_test.cpp  generated_gcn_full_opcode_table_test.cpp  generated_gcn_inst_db_test.cpp  generated_gcn_opcode_enums_test.cpp
tests/exec/: execution_memory_ops_test.cpp  execution_state_builder_test.cpp  execution_sync_ops_test.cpp  issue_eligibility_test.cpp  issue_model_test.cpp  issue_scheduler_test.cpp  op_plan_apply_test.cpp  raw_gcn_instruction_array_parser_test.cpp  raw_gcn_instruction_object_execute_test.cpp  raw_gcn_semantic_execute_test.cpp  raw_gcn_semantic_handler_registry_test.cpp  tensor_op_utils_test.cpp
tests/exec/encoded/: README.md
tests/exec/handlers/: semantic_handler_test.cpp
tests/execution/: encoded_semantic_execute_test.cpp  encoded_semantic_handler_registry_test.cpp  execution_naming_test.cpp  functional_exec_engine_waitcnt_test.cpp  memory_ops_test.cpp  plan_apply_test.cpp  sync_ops_test.cpp  wave_context_builder_test.cpp  wave_context_test.cpp
tests/execution/internal/: barrier_resource_pool_test.cpp  cycle_issue_policy_test.cpp  encoded_issue_candidate_test.cpp  encoded_issue_type_test.cpp  functional_wait_reason_test.cpp  issue_eligibility_test.cpp  issue_model_test.cpp  issue_scheduler_test.cpp  tensor_op_utils_test.cpp
tests/execution/issue_logic/: encoded_issue_candidate_test.cpp  (+1 more)
tests/functional/: advanced_syntax_functional_test.cpp  builtin_scalarbit_functional_test.cpp  constant_memory_functional_test.cpp  divrem_functional_test.cpp  fma_loop_functional_test.cpp  local_bitwise_functional_test.cpp  mapper_test.cpp  practical_vector_isa_functional_test.cpp  predicated_if_functional_test.cpp  private_memory_functional_test.cpp  representative_kernels_functional_test.cpp  scaling_functional_test.cpp  shared_barrier_functional_test.cpp  shared_sync_functional_test.cpp  softmax_shared_functional_test.cpp  three_dimensional_functional_test.cpp  transpose_shared_functional_test.cpp  two_dimensional_functional_test.cpp  vecadd_functional_test.cpp  waitcnt_functional_test.cpp
tests/instruction/: encoded_gcn_inst_format_test.cpp  encoded_instruction_binding_test.cpp  encoded_instruction_descriptor_test.cpp  instruction_array_parser_test.cpp  instruction_decoder_test.cpp  instruction_formatter_test.cpp  instruction_naming_test.cpp  instruction_object_execute_test.cpp  tensor_result_writer_test.cpp
tests/isa/: executable_kernel_builder_test.cpp  executable_kernel_test.cpp  kernel_program_builder_test.cpp  kernel_program_test.cpp  opcode_descriptor_test.cpp  target_isa_test.cpp
tests/loader/: amdgpu_code_object_decoder_test.cpp  amdgpu_obj_loader_test.cpp  artifact_parser_test.cpp  asm_module_integration_test.cpp  asm_parser_test.cpp  device_image_loader_test.cpp  device_segment_image_test.cpp  executable_image_io_test.cpp  gcn_text_parser_test.cpp  program_bundle_io_test.cpp  program_file_loader_test.cpp  program_image_launch_test.cpp  program_lowering_test.cpp  program_object_launch_test.cpp
tests/occupancy/: occupancy_calculator_test.cpp
tests/program/: program_object_types_test.cpp  program_source_reader_test.cpp
tests/runtime/: compatibility_alias_test.cpp  cycle_timeline_test.cpp  debug_info_io_test.cpp  device_memory_manager_test.cpp  encoded_program_object_launch_test.cpp  executed_flow_program_cycle_estimator_test.cpp  executed_flow_program_cycle_stats_test.cpp  execution_stats_test.cpp  hip_cts_test.cpp  hip_cycle_validation_test.cpp  hip_feature_cts_test.cpp  hip_interposer_state_test.cpp  hip_ld_preload_test.cpp  hip_runtime_abi_test.cpp  hip_runtime_test.cpp  hipcc_parallel_execution_test.cpp  kernarg_packer_test.cpp  kernel_metadata_test.cpp  logging_runtime_test.cpp  model_runtime_api_test.cpp  model_runtime_test.cpp  multi_launch_debug_test.cpp  multi_launch_test.cpp  parallel_execution_mode_test.cpp  program_cycle_stats_test.cpp  program_object_launch_test.cpp  raw_code_object_launch_test.cpp  runtime_hooks_test.cpp  runtime_naming_test.cpp  runtime_session_test.cpp  test_matrix_profile.h  timeline_expectation_test.cpp  trace_encoded_test.cpp  trace_event_test.cpp  trace_flow_test.cpp  trace_functional_test.cpp  trace_perfetto_test.cpp  trace_recorder_test.cpp  trace_sink_test.cpp  trace_test.cpp  (+1 more)
tests/state/: ap_runtime_state_test.cpp  wave_runtime_state_test.cpp  wave_state_test.cpp
tests/test_utils/: hipcc_cache_test_utils.h  llvm_mc_test_support.cpp  llvm_mc_test_support.h  trace_test_support.h
(+1460 files in other folders)
