add_executable(gpu_model_tests
  decode/generated_gcn_full_opcode_table_test.cpp
  decode/generated_gcn_inst_db_test.cpp
  decode/gcn_inst_db_lookup_test.cpp
  arch/arch_registry_test.cpp
  decode/gcn_inst_decoder_test.cpp
  decode/gcn_inst_formatter_test.cpp
  decode/gcn_inst_format_test.cpp
  exec/execution_memory_ops_test.cpp
  exec/execution_state_builder_test.cpp
  exec/execution_sync_ops_test.cpp
  exec/tensor_op_utils_test.cpp
  exec/op_plan_apply_test.cpp
  exec/issue_model_test.cpp
  exec/issue_eligibility_test.cpp
  exec/issue_scheduler_test.cpp
  exec/encoded/object/raw_gcn_instruction_array_parser_test.cpp
  exec/encoded/binding/raw_gcn_instruction_binding_test.cpp
  exec/encoded/descriptor/raw_gcn_instruction_descriptor_test.cpp
  exec/encoded/object/raw_gcn_instruction_object_execute_test.cpp
  exec/encoded/semantics/raw_gcn_semantic_execute_test.cpp
  exec/encoded/semantics/raw_gcn_semantic_handler_registry_test.cpp
  exec/handlers/semantic_handler_test.cpp
  isa/kernel_program_builder_test.cpp
  isa/kernel_program_test.cpp
  isa/opcode_descriptor_test.cpp
  isa/target_isa_test.cpp
  state/wave_state_test.cpp
  functional/mapper_test.cpp
  functional/vecadd_functional_test.cpp
  functional/predicated_if_functional_test.cpp
  functional/shared_barrier_functional_test.cpp
  functional/private_memory_functional_test.cpp
  functional/constant_memory_functional_test.cpp
  functional/fma_loop_functional_test.cpp
  functional/scaling_functional_test.cpp
  functional/shared_sync_functional_test.cpp
  functional/softmax_shared_functional_test.cpp
  functional/representative_kernels_functional_test.cpp
  functional/advanced_syntax_functional_test.cpp
  functional/local_bitwise_functional_test.cpp
  functional/builtin_scalarbit_functional_test.cpp
  functional/divrem_functional_test.cpp
  functional/three_dimensional_functional_test.cpp
  functional/two_dimensional_functional_test.cpp
  functional/transpose_shared_functional_test.cpp
  cycle/cycle_smoke_test.cpp
  cycle/async_memory_cycle_test.cpp
  cycle/shared_barrier_cycle_test.cpp
  cycle/private_memory_cycle_test.cpp
  cycle/constant_memory_cycle_test.cpp
  cycle/cache_cycle_test.cpp
  cycle/shared_bank_conflict_cycle_test.cpp
  cycle/fma_loop_cycle_test.cpp
  cycle/scaling_cycle_test.cpp
  cycle/shared_sync_cycle_test.cpp
  cycle/softmax_shared_cycle_test.cpp
  cycle/representative_kernels_cycle_test.cpp
  cycle/advanced_syntax_cycle_test.cpp
  cycle/local_bitwise_cycle_test.cpp
  cycle/builtin_scalarbit_cycle_test.cpp
  cycle/divrem_cycle_test.cpp
  cycle/three_dimensional_cycle_test.cpp
  cycle/two_dimensional_cycle_test.cpp
  cycle/transpose_shared_cycle_test.cpp
  loader/asm_parser_test.cpp
  loader/amdgpu_code_object_decoder_test.cpp
  loader/asm_module_integration_test.cpp
  loader/amdgpu_obj_loader_test.cpp
  loader/device_image_loader_test.cpp
  loader/device_segment_image_test.cpp
  loader/gcn_text_parser_test.cpp
  loader/program_lowering_test.cpp
  loader/executable_image_io_test.cpp
  loader/program_bundle_io_test.cpp
  loader/program_image_launch_test.cpp
  loader/program_file_loader_test.cpp
  program/program_object_types_test.cpp
  runtime/kernel_metadata_test.cpp
  runtime/kernarg_packer_test.cpp
  runtime/hipcc_parallel_execution_test.cpp
  runtime/raw_code_object_launch_test.cpp
  runtime/model_runtime_api_test.cpp
  runtime/runtime_naming_test.cpp
  runtime/debug_info_io_test.cpp
  runtime/cycle_timeline_test.cpp
  runtime/parallel_execution_mode_test.cpp
  runtime/hip_interposer_state_test.cpp
  runtime/hip_cts_test.cpp
  runtime/hip_feature_cts_test.cpp
  runtime/trace_test.cpp
  runtime/runtime_hooks_test.cpp
  runtime/execution_stats_test.cpp
  instruction/instruction_naming_test.cpp
)

target_link_libraries(gpu_model_tests
  PRIVATE
    gpu_model
    GTest::gtest_main
)

gpu_model_enable_warnings(gpu_model_tests)
